# zk_compression

./: .gitignore  Cargo.toml  README.md
circuits/: Cargo.toml
circuits/src/: main.rs  main_circuit.rs  utils.rs
compression/: Cargo.toml
compression/src/: lib.rs  tests.rs  utils.rs
src/: main.rs  main_circuit.rs
