[package]
name = "zk_compression"
version = "0.1.0"
edition = "2021"

[dependencies]
franklin-crypto = {git = "https://github.com/matter-labs/franklin-crypto", branch = "dev", features = ["multicore"]}
rescue_poseidon = {git = "https://github.com/matter-labs/rescue-poseidon.git"}

compression = {path = "../compression"}

[[bin]]
name = "circuits-test"
path = "src/main.rs"